# kalirobodaboda

./: .gitignore  LICENSE  README.md  data_fixture.json  db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_member_stage.py  0002_alter_member_status.py  0002_alter_user_email.py  0002_member.py  0003_member_district_alter_member_card_id.py  0003_user_display_picture.py  0004_alter_user_email.py  0005_alter_user_display_picture.py  0006_alter_user_display_picture.py  0007_alter_user_display_picture.py  0008_user_gender.py  0009_remove_user_gender_alter_user_display_picture.py  0010_alter_user_display_picture.py  0011_alter_user_display_picture.py  0012_user_gender.py  0013_alter_user_gender.py  0014_alter_user_display_picture.py  0015_remove_user_display_picture_member_display_picture.py  0016_remove_member_display_picture_user_display_picture.py
accounts/templates/accounts/: forgot_password.html  member_table.html  profile.html  settings.html  signin.html  signup.html  user_table.html
assets/: package-lock.json
assets/css/: tailwind.output.css
assets/js/: charts-pie.js  form_design.js
companyinfo/: admin.py  models.py
companyinfo/migrations/: 0001_initial.py  0002_leader.py  0002_rename_frequentlyaskedquestions_frequentlyaskedquestion_and_more.py  0003_companyinfo_short_name.py
kaliroboda/: asgi.py  settings.py  urls.py  views.py  wsgi.py
locations/: admin.py  models.py
locations/migrations/: 0001_initial.py
locations/templates/: stages.html
(+12 files in other folders)
